made a proper server HA with nginx LB

--- a/Dockerfile.server
+++ b/Dockerfile.server
@@ -1,12 +1,12 @@
-FROM node:19-alpine
+FROM node:16
 
+# Create app directory
 WORKDIR /usr/src/app
 
-COPY package*.json /usr/src/app/
+COPY ./package*.json ./
 
 RUN npm install
+COPY . .
 
-COPY . /usr/src/app/
-
-EXPOSE 1234
-CMD ["npm", "start"]
+EXPOSE 5000 
+CMD [ "node", "server/server.js" ]
