--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 	"dependencies": {
 		"cassandra-driver": "^4.6.4",
 		"express": "^4.18.2",
+		"socket-io": "^1.0.0",
 		"socket.io": "^4.6.1"
 	}
 }
