--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,5 +1,5 @@
 upstream chats {
-	least_conn;
+	hash $remote_addr consistent;
 	server 172.1.0.2:5000;
 	server 172.1.0.3:5000;
 	server 172.1.0.4:5000;
@@ -9,7 +9,17 @@ server {
 	listen 80;
 	server_name localhost;
 
-	location / {
+	location  / {
+		proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+		proxy_set_header Host $host;
+
 		proxy_pass http://chats;
+
+		proxy_http_version 1.1;
+		proxy_set_header Upgrade $http_upgrade;
+		proxy_set_header Connection "upgrade";
+
 	}
+
 }
+
