bog na nebeto, bmw v surceto (napisah go sq she spq)

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -24,5 +24,17 @@ server {
 	location /sign_in {
 		proxy_pass http://chats/sign_in;
 	}
+
+	location /sign_up {
+		proxy_pass http://chats/sign_up;
+	}
+
+	location /chatrooms {
+		proxy_pass http://chats/chatrooms;
+	}
+
+	location /chat {
+		proxy_pass http://chats/chat;
+	}
 }
 
